// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Disabled Menu 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: white;
}

.emotion-11 {
  overflow: hidden;
  position: absolute;
  top: 0.5rem;
  left: 0rem;
  z-index: 999999999;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  visibility: hidden;
  opacity: 0!important;
}

.emotion-12 {
  max-height: 15.8125rem;
  overflow-y: auto;
  position: absolute;
  left: 0;
  right: 0;
  min-width: 9.375rem;
  max-width: 38.75rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: auto;
  background-color: white;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  border-radius: 0.25rem;
  z-index: 1;
}

.emotion-13 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-14 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
}

.emotion-15 {
  height: 2.875rem;
  font-size: 0.875rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-15:hover {
  background-color: #f6f7ff;
}

.emotion-16 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      TC
                    </div>
                  </span>
                  <span
                    className="emotion-7"
                  >
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-14"
                      >
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: white;
}

.emotion-11 {
  overflow: hidden;
  position: absolute;
  top: 0.5rem;
  left: 0rem;
  z-index: 999999999;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  visibility: hidden;
  opacity: 0!important;
}

.emotion-12 {
  max-height: 15.8125rem;
  overflow-y: auto;
  position: absolute;
  left: 0;
  right: 0;
  min-width: 9.375rem;
  max-width: 38.75rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: auto;
  background-color: white;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  border-radius: 0.25rem;
  z-index: 1;
}

.emotion-13 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-14 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
}

.emotion-15 {
  height: 2.875rem;
  font-size: 0.875rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-15:hover {
  background-color: #f6f7ff;
}

.emotion-16 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-64 {
  fill: black;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-64 path {
  fill: black;
}

.emotion-84 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #edefff;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-84:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-84:hover:not(:disabled) {
  background-color: #e4e7ff;
}

.emotion-84:active:not(:disabled) {
  background-color: #dcdfff;
}

.emotion-84:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-84:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-87 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #1DE9B6;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-87 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-93 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-93 path {
  fill: black;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      TC
                    </div>
                  </span>
                  <span
                    className="emotion-7"
                  >
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-14"
                      >
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                  </span>
                  <span
                    className="emotion-7"
                  >
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-14"
                      >
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_5"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile 1
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_6"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings 1
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_7"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing 1
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_8"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications 1
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_9"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout 1
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-9"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-64"
                        />
                      </span>
                    </div>
                  </span>
                  <span
                    className="emotion-7"
                  >
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-14"
                      >
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-84"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-87"
                    >
                      <span
                        className="emotion-9"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-64"
                        />
                      </span>
                    </div>
                  </span>
                  <span
                    className="emotion-7"
                  >
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-93"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-14"
                      >
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-15"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-16"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: black;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: black;
}

.emotion-9 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-12 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-12 path {
  fill: white;
}

.emotion-13 {
  overflow: hidden;
  position: absolute;
  top: 0.5rem;
  left: 0rem;
  z-index: 999999999;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  visibility: hidden;
  opacity: 0!important;
}

.emotion-14 {
  max-height: 15.8125rem;
  overflow-y: auto;
  position: absolute;
  left: 0;
  right: 0;
  min-width: 9.375rem;
  max-width: 38.75rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: auto;
  background-color: white;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  border-radius: 0.25rem;
  z-index: 1;
}

.emotion-15 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-16 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
}

.emotion-17 {
  height: 2.875rem;
  font-size: 0.875rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-17:hover {
  background-color: #f6f7ff;
}

.emotion-18 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-28 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #d6d6db;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-28:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-28:hover:not(:disabled) {
  background-color: #c1c1c9;
}

.emotion-28:active:not(:disabled) {
  background-color: #adadb8;
}

.emotion-28:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-28:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-37 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-37 path {
  fill: black;
}

.emotion-53 {
  font-size: 1rem;
  font-weight: 500;
  color: #28283e;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #28283e;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-53:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-53:hover:not(:disabled) {
  background-color: rgba(50,50,78,0.07);
}

.emotion-53:active:not(:disabled) {
  background-color: rgba(50,50,78,0.14);
}

.emotion-53:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-53:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-62 {
  fill: #28283e;
  width: 1rem;
  height: 1rem;
}

.emotion-62 path {
  fill: #28283e;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                  </span>
                  <span
                    className="emotion-9"
                  >
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-12"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-13"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-16"
                      >
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-28"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                  </span>
                  <span
                    className="emotion-9"
                  >
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-37"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-13"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-16"
                      >
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          role="button"
        >
          <div>
            <div
              className="emotion-2"
            >
              <button
                className="emotion-53"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                        />
                      </span>
                    </div>
                  </span>
                  <span
                    className="emotion-9"
                  >
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-5"
                  >
                    <span
                      className="emotion-7"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-62"
                      />
                    </span>
                  </span>
                </span>
              </button>
              <div
                className="unique-tooltip-id emotion-13"
              >
                <div
                  className="emotion-14"
                >
                  <div
                    className="emotion-15"
                  >
                    <div
                      data-testid="ictinus_list"
                    >
                      <ul
                        className="emotion-16"
                      >
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_0"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              My Profile
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_1"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Settings
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_2"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Billing
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_3"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Notifications
                            </div>
                          </div>
                        </li>
                        <li>
                          <div
                            className="emotion-17"
                            data-testid="ictinus_list_item_4"
                            onClick={[Function]}
                            onMouseDown={[Function]}
                          >
                            <div
                              className="emotion-18"
                            >
                              Logout
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-5 {
  overflow: hidden;
  position: absolute;
  top: 0.5rem;
  left: 0rem;
  z-index: 999999999;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  visibility: hidden;
  opacity: 0!important;
}

.emotion-6 {
  max-height: 15.8125rem;
  overflow-y: auto;
  position: absolute;
  left: 0;
  right: 0;
  min-width: 9.375rem;
  max-width: 38.75rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: auto;
  background-color: white;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
  border-radius: 0.25rem;
  z-index: 1;
}

.emotion-7 {
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: undefinedpx;
}

.emotion-8 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
}

.emotion-9 {
  height: 2.875rem;
  font-size: 0.875rem;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 1rem 0px 1rem;
  cursor: pointer;
}

.emotion-9:hover {
  background-color: #f6f7ff;
}

.emotion-10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10>div {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div>
      <div>
        Selected: 
        <b>
          -
        </b>
      </div>
      <div
        role="button"
      >
        <div>
          <div
            className="emotion-1"
          >
            <button
              className="emotion-2"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  <span>
                    More
                  </span>
                </span>
              </span>
            </button>
            <div
              className="unique-tooltip-id emotion-5"
            >
              <div
                className="emotion-6"
              >
                <div
                  className="emotion-7"
                >
                  <div
                    data-testid="ictinus_list"
                  >
                    <ul
                      className="emotion-8"
                    >
                      <li>
                        <div
                          className="emotion-9"
                          data-testid="ictinus_list_item_0"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <div
                            className="emotion-10"
                          >
                            My Profile
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          className="emotion-9"
                          data-testid="ictinus_list_item_1"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <div
                            className="emotion-10"
                          >
                            Settings
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          className="emotion-9"
                          data-testid="ictinus_list_item_2"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <div
                            className="emotion-10"
                          >
                            Billing
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          className="emotion-9"
                          data-testid="ictinus_list_item_3"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <div
                            className="emotion-10"
                          >
                            Notifications
                          </div>
                        </div>
                      </li>
                      <li>
                        <div
                          className="emotion-9"
                          data-testid="ictinus_list_item_4"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                        >
                          <div
                            className="emotion-10"
                          >
                            Logout
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
